Closed Bug 78479 Opened 24 years ago Closed 24 years ago

frequent hang on quit after long use

Categories

(Core :: Networking: Cache, defect)

PowerPC
Mac System 9.x
defect
Not set
critical

Tracking

()

VERIFIED FIXED
mozilla0.9.1

People

(Reporter: tarahim, Assigned: gordon)

References

Details

(Keywords: hang)

Attachments

(1 file)

2001050108 Mtrunk I noticed that it took a lot longer than before for Mozilla 0430 build to finish quitting job. Now with 0501 build, it is a complete hang. You wait for longer than 15 min and, still there is nothing you can do but to force quit. This may be related to bug 66730, but I never saw it to occur in builds prior to 0430 build. Memory and Disk Cache are set to 0. History.dat, Bookmarks.html, Panacea.dat, and history.mab files are not bloated.
Looks like a cache problem, since that is what is on the stack.
Component: XPCOM → Networking: Cache
Looks like a cache problem, since that is what is on the stack.
Assignee: kandrot → gordon
QA Contact: scc → tever
Target Milestone: --- → mozilla0.9.1
Keywords: hang
Summary: frequent hang on quit after long use. → frequent hang on quit after long use
Severity: major → critical
Did this happen just once, or everytime? I have been unable to reproduce this with my build from 2001/05/02.
A Japanese user reported a similar problem. (1) Open Preferences dialog, select Advanced - Cache tab and check "Automatically". (2) Mozilla crashed on exit after navigating many web pages. (3) Disk cache becomes unavailable. If you restart Mozilla and see "about:cache", you can see memory cache only. He saw this problem with 2001-05-01-04/Win2k and 2001-05-02-04/Win2k. http://bugzilla.mozilla.gr.jp/show_bug.cgi?id=877
Need help reproducing this bug. tever or ben - can you help reproduce this with cache set to 0 as the user has?
hmmm, I loaded up the 2001050108 Mtrunk mozilla build on my OS9 box, set disk and mem cache to 0, and ran it for well over an hour with a few exits. I'm not seeing this yet. Letting it run overnight.
I think it involved downloading a large file or something. After several force quits, Mozilla started to ignore the Mail/News settings (though still present in prefs.js) and launched Account wizard. Since it happened, I have not seen this hang on exit yet. Has anything changed in Preferences around 0430-0502?
I think I know what's happening with the original stack trace. I should have a patch later today to fix it.
Here's the patch: Index: mozilla/netwerk/cache/src/nsCacheService.cpp =================================================================== RCS file: /cvsroot/mozilla/netwerk/cache/src/nsCacheService.cpp,v retrieving revision 1.46 diff -u -2 -r1.46 nsCacheService.cpp --- nsCacheService.cpp 2001/05/03 02:35:19 1.46 +++ nsCacheService.cpp 2001/05/07 17:54:07 @@ -1112,4 +1112,6 @@ gService->ClearPendingRequests(entry); entry->DetachDescriptors(); + + entry->MarkInactive(); // so we don't call Remove() while we're enumerating gService->DeactivateEntry(entry);
sr=darin
Fix checked in.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
lxr confirms that the patch was checked in, and there are no reproducable steps, so marking VERIFIED.
Status: RESOLVED → VERIFIED
Blocks: 76372
Blocks: 76048
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: