Fix for bug 78479 "frequent hang on quit after long use" and bug 79241 "Crash quiting the app in the cache". sr=darin.